# uv-learning-project

./: .coverage  README.md  hello.py  pyproject.toml
awesome_api/: __init__.py
tests/: test_app.py
